@@ -169,7 +169,7 @@ setMethod("matchPattern", "BOC_SubjectString",
         else
             matches <- .match.BOC.inexact(pattern, subject, max.mismatch, count.only=FALSE)
         ans_width <- rep.int(pattern_length, length(matches))
-        new("BStringViews", subject=subject@subject,
+        new("BStringViews", subject@subject,
             start=matches, width=ans_width, check=FALSE)
     }
 )
