@@ -269,7 +269,7 @@ debug_shiftor <- function()
     if (algo == "gregexpr" || algo == "gregexpr2")
         return(matches)
     ans_width <- rep.int(nchar(pattern), length(matches))
-    new("BStringViews", subject=subject,
+    new("BStringViews", subject,
         start=matches, width=ans_width, check=FALSE)
 }
 
@@ -321,7 +321,7 @@ setMethod("matchPattern", "BStringViews",
             ans_start <- c(ans_start, offset + start(pm))
             ans_width <- c(ans_width, width(pm))
         }
-        new("BStringViews", subject=subject(subject),
+        new("BStringViews", subject(subject),
             start=ans_start, width=ans_width, check=FALSE)
     }
 )
